# natnet-client

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
examples/: print_rigid_bodies.py
natnet_client/: Client.py  Unpackers.py  bytes_data.py  client.py  descriptors.py  enums.py  exceptions.py  mo_cap_data.py  natnet_params.py  unpackers.py
new_natnet_client/: Client.py
tests/: __init__.py
