[tool.poetry]
name = "natnet-client"
version = "3.3.4.0"
description = "natnet client for motive applications with pure python"
authors = ["Woz4tetra <woz4tetra@gmail.com>"]
maintainers = ["Woz4tetra <woz4tetra@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed"
]
readme = "README.md"
license = "GLWTPL"
homepage = "https://optitrack.com/"
repository = "https://github.com/IgnaciodelaTorreArias/natnet-client"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
